--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Kenny Yip Coding</title>
-        <meta name="author" content="Kenny Yip">
+        <meta name="author" content="Utsav Vachhani">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="image_src" href="images/kenny-icon.png">
         <link rel="icon" href="images/kenny-icon.png">
