--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div class="container">
             <div class="my-nav">
-                <div id="my-title"><b><a href="/">Utsav Vachhani Coding</a></b></div> 
-                <div id="my-title"><b><a href="/">uv</a></b></div>
+                <div id="my-title"><b><a href="https://utsav2115.github.io/website.io/">Utsav Vachhani Coding</a></b></div> 
+                <div id="my-title"><b><a>uv</a></b></div>
                 <div class="my-nav-content">
                     <ul>
                         <li><a href="https://www.linkedin.com/in/vachhani-utsav-21ut75/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
