--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="container">
             <div class="my-nav">
-                <div id="my-title"><b><a href="https://utsav2115.github.io/website.io/">Utsav Vachhani Coding</a></b></div> 
+                <div id="my-title"><b><a href="https://utsavvachhani.github.io/website.io/">Utsav Vachhani Coding</a></b></div> 
                 <div id="my-title"><b><a>uv</a></b></div>
                 <div class="my-nav-content">
                     <ul>
