--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="my-nav-content">
                     <ul>
                         <li><a href="https://www.linkedin.com/in/vachhani-utsav-21ut75/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
-                        <li><a href="https://github.com/utsav2115" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+                        <li><a href="https://github.com/utsavvachhani" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
                     </ul>
                 </div>
             </div>
