--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div>
                 <div class="my-header">About</div>
                 <p>
-                    Welcome to utsav vachani's world!!
+                    Welcome to utsav vachhani's world!!
                 </p>
                 <p class="float-right"><i>Last Updated: May 30, 2024</i></p>
                 <br>
